# cabal_relocatable_data_files_template_haskell

./: issue.sh
embeds-data-file/: CHANGELOG.md  UsesDataFile.hs  embeds-data-file.cabal
provides-data-file/: CHANGELOG.md  ProvidesDataFile.hs  provides-data-file.cabal
