cabal-version:       >=1.10
name:                provides-data-file
version:             0.1.0.0
license-file:        LICENSE
author:              Andreas Herrmann
build-type:          Simple
extra-source-files:  CHANGELOG.md
data-files:          my-data-file

library
  exposed-modules:     ProvidesDataFile
  other-modules:       Paths_provides_data_file
  build-depends:       base >=4.13 && <4.14
                     , filepath
  default-language:    Haskell2010
